{
  "version": 4,
  "terraform_version": "1.13.1",
  "serial": 110,
  "lineage": "fb4e8d4d-2246-b549-dd76-6bee15cdb391",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:615299759525:vpc/vpc-0fac7e61518b2788e",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-03019b2cdbdef9886",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0c1edc5988eb9ad67",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fac7e61518b2788e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0eb03d5fe543a576b",
            "owner_id": "615299759525",
            "tags": {
              "Name": "Docusign-default-VPC"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "openwebui_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:615299759525:loadbalancer/app/openwebui-fargate-alb/ada524b20e89de64",
            "arn_suffix": "app/openwebui-fargate-alb/ada524b20e89de64",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "openwebui-fargate-alb-103311042.ap-southeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:615299759525:loadbalancer/app/openwebui-fargate-alb/ada524b20e89de64",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "openwebui-fargate-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0d6c718f4084c1757"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0289ea81eb5ac7a76"
              },
              {
                "subnet_id": "subnet-03da7c27bb83f8091"
              },
              {
                "subnet_id": "subnet-0646fe221b6c47504"
              }
            ],
            "subnets": [
              "subnet-0289ea81eb5ac7a76",
              "subnet-03da7c27bb83f8091",
              "subnet-0646fe221b6c47504"
            ],
            "tags": {
              "Name": "openwebui-fargate-alb",
              "createdby": "cloudteam"
            },
            "tags_all": {
              "Name": "openwebui-fargate-alb",
              "createdby": "cloudteam"
            },
            "vpc_id": "vpc-0fac7e61518b2788e",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1GM3OXH4ZPM65"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "openwebui_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:615299759525:listener/app/openwebui-fargate-alb/ada524b20e89de64/e931fa658ee49a41",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:615299759525:targetgroup/openwebui-fargate-tg/fe28f1fdbfd2bdf9",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:615299759525:listener/app/openwebui-fargate-alb/ada524b20e89de64/e931fa658ee49a41",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:615299759525:loadbalancer/app/openwebui-fargate-alb/ada524b20e89de64",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.openwebui_alb",
            "aws_lb_target_group.openwebui_tg",
            "aws_security_group.alb_sg",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "openwebui_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:615299759525:targetgroup/openwebui-fargate-tg/fe28f1fdbfd2bdf9",
            "arn_suffix": "targetgroup/openwebui-fargate-tg/fe28f1fdbfd2bdf9",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:615299759525:targetgroup/openwebui-fargate-tg/fe28f1fdbfd2bdf9",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-southeast-2:615299759525:loadbalancer/app/openwebui-fargate-alb/ada524b20e89de64"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "openwebui-fargate-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "openwebui-fargate-tg",
              "createdby": "cloudteam"
            },
            "tags_all": {
              "Name": "openwebui-fargate-tg",
              "createdby": "cloudteam"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0fac7e61518b2788e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:615299759525:security-group/sg-0d6c718f4084c1757",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d6c718f4084c1757",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.103.0.0/16",
                  "10.104.0.0/16",
                  "10.102.2.0/24",
                  "10.80.0.0/22",
                  "10.80.4.0/22",
                  "10.80.8.0/22",
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-sg20250918032250621600000001",
            "name_prefix": "alb-sg",
            "owner_id": "615299759525",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-sg",
              "createdby": "cloudteam"
            },
            "tags_all": {
              "Name": "alb-sg",
              "createdby": "cloudteam"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fac7e61518b2788e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:615299759525:security-group/sg-052b5c0f1ab95a5f5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-052b5c0f1ab95a5f5",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 8000
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d6c718f4084c1757"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "ecs-sg20250918032253295300000003",
            "name_prefix": "ecs-sg",
            "owner_id": "615299759525",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ecs-sg",
              "createdby": "cloudteam"
            },
            "tags_all": {
              "Name": "ecs-sg",
              "createdby": "cloudteam"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fac7e61518b2788e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:615299759525:security-group/sg-079e7b660c1bc9f23",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-079e7b660c1bc9f23",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "NFS from ECS tasks",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-052b5c0f1ab95a5f5"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "efs-sg20250918041034054600000001",
            "name_prefix": "efs-sg",
            "owner_id": "615299759525",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "efs-sg",
              "createdby": "cloudteam"
            },
            "tags_all": {
              "Name": "efs-sg",
              "createdby": "cloudteam"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fac7e61518b2788e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.ecs_sg",
            "data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}